running 'terraform apply'